--- a/css/home.css
+++ b/css/home.css
@@ -16,6 +16,18 @@
 body.light .sgd-logo{
     border: 2px solid var(--light-accent);
 }
+/*.intro{
+    color: var(--dark-text);
+    transition: 0s;
+}
+
+body.light .intro{
+    color: var(--light-text);
+}*/
+/* Problematic */
+
+
+
 
 .intro{
     color: var(--dark-text);
@@ -23,13 +35,10 @@ body.light .sgd-logo{
     font-size: 40px;
     font-weight: bold;
     text-shadow: 4px 2px 4px #00000025;
+    transition: 0s;
 }
 
 body.light .intro{
-    color: var(--light-text);
-}
-
-body.light{
     color: var(--light-text);
 }
 
@@ -41,6 +50,7 @@ body.light{
     font-family: Comfortaa, Opens Sans, sans-serif;
     font-size: 22px;
     line-height: 42px;
+    transition: 0s;
 }
 
 body.light .about-short{
