--- a/css/projects.css
+++ b/css/projects.css
@@ -57,7 +57,7 @@ body.light .project-desc{
 }
 
 .source-link{
-    background-color: #4f42c4;
+    background-color: #3085f3;
     padding: 4px;
     text-decoration: none;
     color: #ffffff;
