--- a/css/projects.css
+++ b/css/projects.css
@@ -6,6 +6,7 @@
     font-weight: bold;
     color: var(--dark-text);
     text-shadow: 4px 2px 4px #00000025;
+    text-align: center;
 }
 
 body.light .projects-header{
