--- a/css/main.css
+++ b/css/main.css
@@ -46,9 +46,9 @@ body.light{
     --dark-border: #999999;
     --sgd-blue: #1d68a4; /* #1d68a4 */
   /* Light colors */
-    --light-background: #EBEBEB; /* #ddeeeb*/
-    --light-foreground: #acb1b3;
-    --light-accent: #414141; /* #83898d */
+    --light-background: #dcdcdc; /* #ddeeeb*/
+    --light-foreground: #c6ccd0;
+    --light-accent: #7a7a7a; /* #83898d */
     --light-text: #1c1c1d;
     --light-border: #414141;
     --light-sgd-blue: #014D8E; /* #004483 */
@@ -246,6 +246,12 @@ body.light .sidebar-link:hover{
   cursor: pointer;
   padding: 0px;
 }
+
+body.light .sidebar .closebtn {
+    filter: brightness(40%);
+}
+
+
 /* The button used to open the sidebar */
 .openbtn {
   display: flex;
