--- a/css/main.css
+++ b/css/main.css
@@ -370,8 +370,23 @@ body.light .footer-link{
   color: var(--dark-text);
   font-family: Comfortaa, Open Sans, sans-serif;
   font-size: 24px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 body.light .text{
   color: var(--light-text);
+}
+
+.generic-text-header {
+    font-family: Orbitron, Open Sans, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    color: var(--dark-text);
+    text-shadow: 4px 2px 4px #00000025;
+    text-align: center;
+}
+
+body.light .generic-text-header {
+    color: var(--light-text);
 }
