--- a/css/certifications.css
+++ b/css/certifications.css
@@ -25,6 +25,8 @@ body.light .certifications-text {
     margin-right: auto;
     text-align: center;
     color: var(--sgd-blue);
+    width: fit-content;
+    max-width: 80%;
 }
 
 body.light .certificate {
@@ -36,7 +38,11 @@ body.light .certificate {
     margin-left: auto;
     margin-right: auto;
     width: 800px;
-    max-width: 80%;
+    max-width: 100%;
     border: 1px solid var(--dark-accent);
     border-radius: 20px;
+}
+
+body.light .certificate-img {
+    border: 1px solid var(--light-accent);
 }
