--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ body.light{
     --dark-text: #f0ffff;
     --dark-border: #999999;
     --sgd-blue: #1d68a4; /* #1d68a4 */
+    --dark-blue-high-contrast: #9CC6F2;
   /* Light colors */
     --light-background: #dcdcdc; /* #ddeeeb*/
     --light-foreground: #c6ccd0;
@@ -52,6 +53,7 @@ body.light{
     --light-text: #1c1c1d;
     --light-border: #414141;
     --light-sgd-blue: #014D8E; /* #004483 */
+    --light-blue-high-contrast: #000000;
 }
 
 /* Text selection */
@@ -359,17 +361,17 @@ body.light .attribution{
 }
 
 .footer-link{
-    color: #9CC6F2;
+    color: var(--dark-blue-high-contrast);
 }
 
 body.light .footer-link{
-    color: #000000;
+    color: var(--light-blue-high-contrast);
 }
 
 .text{
-  color: var(--dark-text);
-  font-family: Comfortaa, Open Sans, sans-serif;
-  font-size: 24px;
+    color: var(--dark-text);
+    font-family: Comfortaa, Open Sans, sans-serif;
+    font-size: 24px;
     margin-left: 10%;
     margin-right: 10%;
 }
