--- a/css/resume.css
+++ b/css/resume.css
@@ -3,7 +3,7 @@
     display: flex;
     height: 30px;
     width: 100%;
-    background-color: #155e9c;
+    background: #155e9c;
     top: 0;
     left: 0;
     right: 0;
