--- a/css/socials.css
+++ b/css/socials.css
@@ -4,7 +4,7 @@
     margin-right: auto;
     width: fit-content;
     max-width: 80%;
-    background-color: var(--dark-foreground);
+    background: var(--dark-foreground);
     height: 100%;
     vertical-align: middle;
     padding: 15px;
@@ -13,7 +13,7 @@
 }
 
 body.light .socials-links {
-    background-color: var(--light-foreground);
+    background: var(--light-foreground);
     border: 1px solid var(--light-accent);
 }
 
