--- a/css/stripey.css
+++ b/css/stripey.css
@@ -1,4 +1,4 @@
 body{
   background: repeating-linear-gradient( 45deg, transparent, transparent 14px, rgba(60, 60, 60, 0.1) 14px, rgba(60, 60, 60, 0.1) 28px);
-  background-color: #014D8E;
+  background: #014D8E;
 }
