--- a/css/certifications.css
+++ b/css/certifications.css
@@ -13,8 +13,8 @@ body.light .certifications-text {
 
 .certifications-badge {
     display: block;
-    width: fit-content;
-    max-width: 80%;
+    width: 340px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
